[package]
name = "v2c-rust-hyper"
version = "0.1.0"
authors = ["inqb (inqb@protonmail.com)"]
edition = "2018"

[dependencies]
tokio = { version = "1.2.0", features = ["full"] }
hyper = { version = "0.14.4", features = ["full"] }
hyper-tls = "0.5.0"
base64 = "0.13.0"
reqwest = "0.11.0"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
url = "1.7"
